--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,13 +14,13 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "192.168.56.101",
-    "user": "go",
+    "host": "192.168.56.102",
+    "user": "root",
     "password": "123456",
     //"password": "password",
     //"port": "22",
     
-    "remote_path": "/home/go/superserver/src/superserver",
+    "remote_path": "/root/superserver/src/superserver",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
